@@ -1,6 +1,12 @@
 # ChangeLog for net-nntp/sabnzbd
-# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2017 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*sabnzbd-1.2.0 (15 Jan 2017)
+
+  15 Jan 2017; Daniel Rune Jensen (soehest) <drunejensen@gmail.com>
+  +sabnzbd-1.2.0.ebuild:
+  Version bump.
 
 *sabnzbd-1.1.1 (17 Nov 2016)
 
